--- a/scss/_instructors.scss
+++ b/scss/_instructors.scss
@@ -57,12 +57,12 @@
     color: #fff;
     border: 0;
     &.owl-prev {
-      left: -80px;
+      left: -20px;
       right: auto;
     }
 
     &.owl-next {
-      right: -80px;
+      right: -20px;
       left: auto;
     }
     &:hover {
